// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn render should change submit button text if loading and make it disabled 1`] = `
<form data-test="auth-form">
  <!---->
  <v-title-stub><span>Log in&nbsp;to&nbsp;your Endpass account to&nbsp;access site actions</span></v-title-stub>
  <!---->
  <form-item-stub>
    <v-input-stub value="" data-vv-as="email" data-vv-name="email" name="email" type="email" placeholder="Enter your email..." data-test="email-input"></v-input-stub>
  </form-item-stub>
  <v-button-stub skin="primary" size="big" data-test="submit-button-auth">
    Continue
  </v-button-stub>
  <v-spacer-stub height="3" width="0"></v-spacer-stub>
  <v-divider-stub>or sign in with</v-divider-stub>
  <form-row-stub>
    <form-controls-stub>
      <google-auth-button-stub type="button"></google-auth-button-stub>
      <v-spacer-stub height="0" width="16"></v-spacer-stub>
      <git-auth-button-stub type="button"></git-auth-button-stub>
    </form-controls-stub>
  </form-row-stub>
  <v-divider-stub></v-divider-stub>
  <form-row-stub centered="" bold="">
    Don't have an account?&nbsp;
    <v-link-stub href="#" data-test="switch-to-sign-up">
      Sign up
    </v-link-stub>
  </form-row-stub>
</form>
`;

exports[`SignIn render should correctly render SignIn component 1`] = `
<form data-test="auth-form">
  <!---->
  <v-title-stub><span>Log in&nbsp;to&nbsp;your Endpass account to&nbsp;access site actions</span></v-title-stub>
  <!---->
  <form-item-stub>
    <v-input-stub value="" data-vv-as="email" data-vv-name="email" name="email" type="email" placeholder="Enter your email..." data-test="email-input"></v-input-stub>
  </form-item-stub>
  <v-button-stub skin="primary" size="big" data-test="submit-button-auth" disabled="true">
    Continue
  </v-button-stub>
  <v-spacer-stub height="3" width="0"></v-spacer-stub>
  <v-divider-stub>or sign in with</v-divider-stub>
  <form-row-stub>
    <form-controls-stub>
      <google-auth-button-stub type="button"></google-auth-button-stub>
      <git-auth-button-stub type="button"></git-auth-button-stub>
    </form-controls-stub>
  </form-row-stub>
  <v-divider-stub></v-divider-stub>
  <form-row-stub class="v-text-center v-fw-b">
    Don't have an account?&nbsp;
    <v-link-stub href="#" data-test="switch-to-sign-up">
      Sign up
    </v-link-stub>
  </form-row-stub>
</form>
`;
